--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,9 @@
 <% title(@project.name, "Projects") %>
 <h2><%= @project.name %></h2>
-<%= link_to "Edit Project", edit_project_path(@project) %>
-<%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you want to delete this project?" %>
+<% admins_only do %>
+  <%= link_to "Edit Project", edit_project_path(@project) %>
+  <%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you want to delete this project?" %>
+<% end %>
 <ul id='tickets'>
   <% @project.tickets.each do |ticket| %>
     #<%= ticket.id %> - <%= link_to ticket.title, [@project, ticket] %> 
