Restrict actions in TicketsController based on permissions and hide links

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,4 +9,6 @@
     #<%= ticket.id %> - <%= link_to ticket.title, [@project, ticket] %> 
   <% end %>
 </ul>
+<% authorized?("create tickets".to_sym, @project) do %>
 <%= link_to "New Ticket", new_project_ticket_path(@project) %>
+<% end %>
