--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,7 +1,11 @@
 <div id='ticket'>
   <h2><%= @ticket.title %></h2>
-  <%= link_to "Edit Ticket", [:edit, @project, @ticket] %>
-  <%= link_to "Delete Ticket", [@project, @ticket], :method => :delete, :confirm => "Are you sure you want to delete this ticket?" %>
+  <% authorized?("edit tickets".to_sym, @project) do %>
+    <%= link_to "Edit Ticket", [:edit, @project, @ticket] %>
+  <% end %>
+  <% authorized?("delete tickets".to_sym, @project) do %>
+    <%= link_to "Delete Ticket", [@project, @ticket], :method => :delete, :confirm => "Are you sure you want to delete this ticket?" %>
+  <% end %>
   <br><small>Created by <%= @ticket.user.email %><small>
   <%= simple_format(@ticket.description) %>
 </div>
