--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,3 +1,4 @@
 <h2><%= @user %></h2>
 <%= link_to "Edit User", [:edit, :admin, @user] %> 
 <%= link_to "Delete User", [:admin, @user], :method => :delete, :confirm => "Are you sure you want to delete this user?" %>
+<%= link_to "Permissions", admin_user_permissions_path(@user)%>
