--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,8 +4,13 @@
   <%= link_to "Edit Project", edit_project_path(@project) %>
   <%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you want to delete this project?" %>
 <% end %>
+<%= form_tag search_project_tickets_path(@project), :method => :get do %>
+  <%= label_tag :search %>
+  <%= text_field_tag "search", params[:search] %>
+  <%= submit_tag "Search" %>
+<% end %> 
 <ul id='tickets'>
-  <% @project.tickets.each do |ticket| %>
+  <% @tickets.each do |ticket| %>
     <li>
       <%= render ticket.state if ticket.state %>
       #<%= ticket.id %> - <%= link_to ticket.title, [@project, ticket] %>
