--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -33,4 +33,12 @@
   </div>
   <%= render 'comments/form' %>
 </div>
-
+<div id="watchers">
+  <%= toggle_watching_button %>
+  <h4>Watchers</h4>
+  <ul>
+    <% @ticket.watchers.each do |watcher| %>
+      <li><%= watcher %></li>
+    <% end %>
+  </ul>
+</div>
